Bug 83027 - FILESAVE Can no longer Save as .csv WITHOUT field delimiters.
Summary: FILESAVE Can no longer Save as .csv WITHOUT field delimiters.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.2.0.1 rc
Hardware: All All
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: target:4.5.0 target:4.4.0.0.beta3 tar...
Keywords: bibisected, regression
Depends on:
Blocks:
 
Reported: 2014-08-24 23:24 UTC by Arie
Modified: 2015-12-17 08:33 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Arie 2014-08-24 23:24:04 UTC
Dear reader,

This used to work (e.g. in 4.1.5.3), but somehow got broken(?):
Version 4.2
Calc
Make spreadsheet (.ods).
File
Save as
Text csv
check: Edit filter settings
Save
Character set: Unicode UTF-8
Field delimiter: [nothing] i.e. delete the suggested comma , in that field
Text delimiter: [nothing] i.e. delete the suggested double-quote “ in that field
check: Save cell content as shown
OK
What results, is STILL a csv WITH comma’s as delimiters, which I need NOT to be there … ;-(
[why? … long story … but I’m using a nice spreadsheet interface to save de facto xml, which gets read by a .qtz component in a VJ-program, Resolume Avenue)
Is this a bug, the comma’s getting introduced when I empty the field “Field delimiter”?

See also discussion at
http://en.libreofficeforum.org/node/8895
Thanks.
Comment 1 Owen Genat (retired) 2014-08-27 23:45:46 UTC
Related forum thread: http://en.libreofficeforum.org/node/8895

It was possible in v3.x and up to v4.1.6.2 to edit the CSV filter settings, delete the field delimiter and have the file export without these characters. Sometime during v4.2 this behaviour has changed and now the field delimiters are exported regardless. Confirmed. Status set to NEW. Platform set to All/All.
Comment 2 Owen Genat (retired) 2014-08-27 23:46:25 UTC
PossibleRegression tag added to Whiteboard.
Comment 3 raal 2014-10-16 18:44:21 UTC
 a67b874d60de1f1a44bef57a53a7b8a84db0ba58 is the first bad commit
commit a67b874d60de1f1a44bef57a53a7b8a84db0ba58
Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com>
Date:   Tue Dec 11 03:32:02 2012 +0000

    source-hash-19f4ebd8a54da0ae03b9cc8481613e5cd20ee1e7
    
    commit 19f4ebd8a54da0ae03b9cc8481613e5cd20ee1e7
    Author:     Caolán McNamara <caolanm@redhat.com>
    AuthorDate: Mon Nov 12 21:17:37 2012 +0000
    Commit:     Caolán McNamara <caolanm@redhat.com>
    CommitDate: Tue Nov 13 09:49:18 2012 +0000
    
        use SetControlForeground instead of SetTextColor
    
        because that's persistent across unrelated style
        changes otherwise setting e.g. alignment will
        reset the color to default black
    
        Change-Id: I2b975c3914a59a93e54d72aa0975a066b5edf533

:100644 100644 6d85145f7ba0ead31c84e60a4f7ea59af07f4e83 29d96b0de6d16a73b1e9ff2ca8745b115e40d115 M	autogen.log
:100644 100644 5d2105bc5db0d97452b3f213d028567f7ef47f74 fc50744f3abcdc37e7e8ae63b5ee73f25bb1c6e9 M	ccache.log
:100644 100644 cb3471f771599c0198309b766b1119b4272134de 28c61ffba7e7adab533f7ff9a4f4f595e4439822 M	commitmsg
:100644 100644 ea177fc38ffa1376ecf167db31aadeae1ee62b34 144992024292b77d35ec3f94e2b3fd309f9d27f1 M	dev-install.log
:100644 100644 34bcd3ceb8be50720147e089fde247e8d90868b0 ae2cc20a3e3477e7b1845778dd570bf277812953 M	make.log
:040000 040000 21c1e97d1421f61bbbeb0734daeac98e43fe52a1 2c1a78c87a5e84fe1c2bafb167b87e7c85aed252 M	opt

 git bisect log
# bad: [423a84c4f7068853974887d98442bc2a2d0cc91b] source-hash-c15927f20d4727c3b8de68497b6949e72f9e6e9e
# good: [65fd30f5cb4cdd37995a33420ed8273c0a29bf00] source-hash-d6cde02dbce8c28c6af836e2dc1120f8a6ef9932
git bisect start 'latest' 'oldest'
# bad: [e02439a3d6297a1f5334fa558ddec5ef4212c574] source-hash-6b8393474974d2af7a2cb3c47b3d5c081b550bdb
git bisect bad e02439a3d6297a1f5334fa558ddec5ef4212c574
# good: [8f4aeaad2f65d656328a451154142bb82efa4327] source-hash-1885266f274575327cdeee9852945a3e91f32f15
git bisect good 8f4aeaad2f65d656328a451154142bb82efa4327
# bad: [9995fae0d8a24ce31bcb5e9cd0459b69cfbf7a02] source-hash-8600bc24bbc9029e92bea6102bff2921bc10b33e
git bisect bad 9995fae0d8a24ce31bcb5e9cd0459b69cfbf7a02
# good: [51b63dca7427db64929ae1885d7cf1cc7eb0ba28] source-hash-806d18ae7b8c241fe90e49d3d370306769c50a10
git bisect good 51b63dca7427db64929ae1885d7cf1cc7eb0ba28
# bad: [d65a58c31c8da044ef66ae4517fa2fe74cec0019] source-hash-2e053cf5ea4d93a2e1845e795a9c7fe1e08c84af
git bisect bad d65a58c31c8da044ef66ae4517fa2fe74cec0019
# bad: [79e02001f27d33b3b478324ab6fba5683413b4d9] source-hash-b6c016da23d309b4ac7d154bc33a22397974ed73
git bisect bad 79e02001f27d33b3b478324ab6fba5683413b4d9
# good: [183a576d94de9a9439d580c8b81f335ab57cdbdc] source-hash-a599f5b4b51848e3b397d471c9d12b373caadcef
git bisect good 183a576d94de9a9439d580c8b81f335ab57cdbdc
# bad: [a67b874d60de1f1a44bef57a53a7b8a84db0ba58] source-hash-19f4ebd8a54da0ae03b9cc8481613e5cd20ee1e7
git bisect bad a67b874d60de1f1a44bef57a53a7b8a84db0ba58
# good: [7fd8bdb3b18f50ea0adbc0a5e611f6a844b23189] source-hash-a1ac2538e9b287444500618ab4d2f0f06c25cf34
git bisect good 7fd8bdb3b18f50ea0adbc0a5e611f6a844b23189
# first bad commit: [a67b874d60de1f1a44bef57a53a7b8a84db0ba58] source-hash-19f4ebd8a54da0ae03b9cc8481613e5cd20ee1e7
Comment 4 Arie 2014-10-16 21:46:39 UTC
Hi, I don't see how "use SetControlForeground instead of SetTextColor
    because that's persistent across unrelated style
        changes otherwise setting e.g. alignment will
        reset the color to default black"

... has anything to do with the export-to-csv-without-delimiters bug ??

Cheers,
Arie
Comment 5 Markus Mohrhard 2014-12-14 20:06:35 UTC
There is a patch for it in https://gerrit.libreoffice.org/#/c/13474/ but I want to hear Eike's opinion on it.
Comment 6 Eike Rathke (retired, only occasionally showing up) 2014-12-15 12:36:43 UTC
(In reply to Arie from comment #4)
> ... has anything to do with the export-to-csv-without-delimiters bug ??

You have to know how bibisecting works, the first bad commit is where the bug was detected to be introduced in a series of commits, the actual commit introducing the bug may be before that one.

@Markus:
I'm unbiased, I thought ',' would be a good default if no separator was selected, assuming a settings error, but if there are cases where Calc is used to write concatenated cell content without, so be it ;-)
Comment 7 Commit Notification 2014-12-15 13:04:30 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=13de511e7c3c7423dbac7e8751c95cac17194b69

no separator really means no separator, fdo#83027

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2014-12-15 21:49:12 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e9aa788f6c2016953f3e9ff4483f8d4215c9edea&h=libreoffice-4-4

no separator really means no separator, fdo#83027

It will be available in 4.4.0.0.beta3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2014-12-16 14:41:38 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=34b367695baf66bcf797bb7654d753269ef3304a&h=libreoffice-4-3

no separator really means no separator, fdo#83027

It will be available in 4.3.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Robinson Tryon (qubit) 2015-12-17 08:33:53 UTC
Migrating Whiteboard tags to Keywords: (bibisected)
[NinjaEdit]