no separator really means no separator, fdo#83027

Change-Id: I612a46701e7447db63f38ed709e8693d0533710d
Reviewed-on: https://gerrit.libreoffice.org/13474
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Eike Rathke <erack@redhat.com>
Reviewed-on: https://gerrit.libreoffice.org/13487
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>