sc/source/ui/dbgui/asciiopt.cxx
@@ -361,8 +361,7 @@ sal_Unicode ScAsciiOptions::GetWeightedFieldSep( const OUString & rFieldSeps, bo
     OUString aFieldSeps( bDecodeNumbers ? lcl_decodeSepString( rFieldSeps, bMergeFieldSeps) : rFieldSeps);
     if (aFieldSeps.isEmpty())
     {
-        SAL_WARN( "sc.ui", "ScAsciiOptions::GetWeightedFieldSep - no separator at all, using ',' comma");
-        return ',';
+        return 0;
     }
     else if (aFieldSeps.getLength() == 1)
         return aFieldSeps[0];
